[gd_scene load_steps=11 format=3 uid="uid://dv0syiw8u61jl"]

[ext_resource type="Script" path="res://entities/player.gd" id="1_vqee6"]
[ext_resource type="Texture2D" uid="uid://cjctsx7pwv4mg" path="res://assets/sprites/tivoguy.png" id="2_l2dv1"]
[ext_resource type="Texture2D" uid="uid://c5egoejyjgpse" path="res://assets/sprites/eyes.png" id="3_yvc60"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3xut"]
size = Vector2(18, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ln6c"]
size = Vector2(8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_6inw2"]
atlas = ExtResource("3_yvc60")
region = Rect2(0, 4, 11, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4aj0"]
atlas = ExtResource("3_yvc60")
region = Rect2(0, 0, 11, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc4d1"]
atlas = ExtResource("3_yvc60")
region = Rect2(0, 12, 11, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_texae"]
atlas = ExtResource("3_yvc60")
region = Rect2(0, 0, 11, 4)

[sub_resource type="SpriteFrames" id="SpriteFrames_e2eu6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6inw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4aj0")
}],
"loop": false,
"name": &"blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc4d1")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_texae")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[node name="Player" type="Area2D"]
z_index = 1
collision_layer = 0
monitorable = false
script = ExtResource("1_vqee6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_c3xut")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_0ln6c")

[node name="EyesBlinkTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SpritePivot" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="SpritePivot"]
position = Vector2(-9, -9)
texture = ExtResource("2_l2dv1")
centered = false
region_enabled = true
region_rect = Rect2(1, 6, 18, 20)

[node name="Eyes" type="AnimatedSprite2D" parent="SpritePivot"]
position = Vector2(-3, -4)
sprite_frames = SubResource("SpriteFrames_e2eu6")
animation = &"idle"
autoplay = "idle"
centered = false

[node name="AntennaL" type="Sprite2D" parent="SpritePivot"]
position = Vector2(-3, -9)
texture = ExtResource("2_l2dv1")
centered = false
offset = Vector2(-5, -6)
region_enabled = true
region_rect = Rect2(2, 0, 5, 6)

[node name="AntennaR" type="Sprite2D" parent="SpritePivot"]
position = Vector2(-1, -9)
texture = ExtResource("2_l2dv1")
centered = false
offset = Vector2(0, -6)
region_enabled = true
region_rect = Rect2(9, 0, 4, 6)

[node name="LegL" type="Sprite2D" parent="SpritePivot"]
position = Vector2(-3, 10)
texture = ExtResource("2_l2dv1")
centered = false
region_enabled = true
region_rect = Rect2(12, 26, 5, 2)

[node name="LegR" type="Sprite2D" parent="SpritePivot"]
position = Vector2(1, 10)
texture = ExtResource("2_l2dv1")
centered = false
region_enabled = true
region_rect = Rect2(12, 26, 5, 2)
